# hyperISP

./: .clang-format  .clangd  CMakeLists.txt  README.md
configs/: nikon_d3200.toml
include/: config.hpp  frame.hpp  frames_io.hpp  isp_block.hpp  pipeline_data.hpp
include/blocks/: aaf.hpp  awb.hpp  blc.hpp  cfa.hpp  dpc.hpp
src/: config.cpp  main.cpp
src/blocks/: aaf.cu  awb.cu  blc.cu  cfa.cu  dpc.cu
